# ai-leadership-insight-agent

./: .env.example  Makefile  README.md  app.py  config.yaml  interactive_agent_tester.ipynb  pyproject.toml  requirements.txt
data/: bm25_index.pkl
data/chroma_db/: chroma.sqlite3
data/docs/: .gitkeep  APAC_Strategy_Note_Oct2024.md  FY2024_Annual_Report.md  Q3_FY2024_Quarterly_Report.md
scripts/: ingest.py
src/insight_agent/: __init__.py  config.py  exceptions.py
src/insight_agent/ingestion/: __init__.py  chunker.py  loader.py  pipeline.py
src/insight_agent/output/: __init__.py  charts.py
src/insight_agent/reasoning/: __init__.py  agent.py  generator.py
src/insight_agent/retrieval/: __init__.py  bm25.py  embedder.py  retriever.py
tests/: __init__.py  conftest.py  test_ingestion.py  test_retrieval.py
ui/: __init__.py  app.py
ui/components/: __init__.py  decision_tab.py  insight_tab.py
validation/: evaluate.py  qa_pairs.json
