[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "insight-agent"
version = "0.1.0"
description = "AI Leadership Insight & Decision Agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "google-generativeai>=0.8.0",
    "langchain-google-genai>=2.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.40.0",
    "matplotlib>=3.9.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
